# automation_x

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_post_dry_run_idempotency.py  0003_x_reconciliation_timestamps.py  0004_automation_runs.py  0005_automation_run_counters.py  0006_llm_runs.py  0006_memory_history.py
docs/: architecture.md  codex_mcp.md  n8n_workflows.md  operation_runbook.md  safety_policy.md
growth_agent/: __init__.py  config.py  database.py  deps.py  main.py  mcp_server.py  mcp_tools.py  models.py  schemas.py
growth_agent/clients/: openai_client.py  postiz.py  x_api.py
growth_agent/scripts/: __init__.py  run_cycle.py
growth_agent/services/: automation.py  draft_imports.py  drafts.py  evaluator.py  feedback.py  llm_generation.py  memory.py  metrics.py  reconcile.py  reports.py  text.py
n8n/: growth_agent_n8n_dry_run_smoke_test.json  growth_agent_n8n_live_cycle.json  growth_agent_n8n_metrics_catchup.json
scripts/: check_config.py
tests/: conftest.py  test_api.py  test_automation.py  test_mcp_tools.py  test_memory.py  test_openai_client.py  test_x_api.py
